# segmentation-copilot

./: .env.example  .gitignore  README.md  alembic.ini  app.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 50d5b46784ac_initial_schema.py
deploy/: .dockerignore  Dockerfile  docker-compose.yml
deploy/k8s/base/: api.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  mcp-http.yaml  migration.yaml  namespace.yaml  networkpolicy.yaml  postgres.yaml  redis.yaml  scheduler.yaml  secret-example.yaml  streamlit-ui.yaml  webex-bot.yaml  worker.yaml
services/: __init__.py
services/api/: __init__.py  auth.py  deps.py  main.py  schemas.py
services/api/routers/: __init__.py  health.py  matrix.py  proposals.py  runs.py  sgt.py
services/cli/: __init__.py  main.py
services/mcp_server/: __init__.py  http.py  server.py  stdio.py
services/threat_daemon/: __init__.py  main.py  runner.py
services/webex_bot/: __init__.py  cards.py  client.py  main.py  notifier.py  verify.py
services/worker/: __init__.py  cursor.py  leader.py  main.py  scan.py  scheduler.py  worker.py
src/segmentation_copilot/: __init__.py  agent.py  aggregator.py  classify.py  config.py  contracts.py  db.py  parser.py  sgt.py  tools.py
src/segmentation_copilot/core/: __init__.py  db.py
src/segmentation_copilot/core/events/: __init__.py  bus.py  redis_bus.py  streams.py
src/segmentation_copilot/core/models/: __init__.py  domain.py  orm.py
src/segmentation_copilot/core/observability/: __init__.py  logging.py  metrics.py
src/segmentation_copilot/core/repositories/: __init__.py  classifications.py  contracts.py  events.py  matrix.py  proposals.py  runs.py  sgt.py
src/segmentation_copilot/core/services/: __init__.py  baseline.py  classification.py  ingestion.py  matrix.py  notifier.py  proposal.py
src/segmentation_copilot/core/threat/: __init__.py  abuseipdb.py  aggregator.py  base.py  cache.py  otx.py  talos.py  virustotal.py
src/segmentation_copilot/sources/: __init__.py  base.py  local.py  ssh.py  streaming.py  streaming_ssh.py
tests/: conftest.py  test_aggregator.py  test_api.py  test_cli.py  test_contracts.py  test_event_bus.py  test_mcp_server.py  test_no_core_in_app.py  test_parser.py  test_proposal_service.py  test_repositories.py  test_scheduler.py  test_services.py  test_threat_daemon.py  test_threat_intel.py  test_webex_bot.py  test_worker.py
tests/fixtures/: sgt_dict.json
